--- a/.gitattributes
+++ b/.gitattributes
@@ -28,3 +28,4 @@
 /vendor/golang.org/x/text/LICENSE filter=lfs diff=lfs merge=lfs -text
 /vendor/golang.org/x/text/PATENTS filter=lfs diff=lfs merge=lfs -text
 *.txt filter=lfs diff=lfs merge=lfs -text
+/vendor/github.com/joho/godotenv/LICENCE filter=lfs diff=lfs merge=lfs -text
