--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
+*.mov filter=lfs diff=lfs merge=lfs -text
 *.gitignore filter=lfs diff=lfs merge=lfs -text
 *.mod filter=lfs diff=lfs merge=lfs -text
 *.go filter=lfs diff=lfs merge=lfs -text
